# research-intelligence-agent

./: .dockerignore  .env.sample  .gitignore  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
app/backend/: Dockerfile  app.py  main.py
app/backend/agents/: graph.py  market_data.py  news_sentiment.py  state.py  supervisor.py  synthesis.py  utils.py  web_research.py
app/backend/api/: health.py  research.py
app/backend/core/: azure_clients.py  config.py  content_safety.py  rate_limiter.py  telemetry.py
app/backend/models/: research.py
app/backend/tools/: market_data.py  news_search.py  web_search.py  wikipedia.py
app/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/frontend/src/: App.tsx
app/frontend/src/api/: research.ts
app/frontend/src/components/: FinalReport.tsx  PlanReview.tsx  QueryForm.tsx  ResearchProgress.tsx
app/frontend/src/types/: research.ts
infra/: backend.tf  main.tf  outputs.tf  terraform.tfvars.sample  variables.tf
infra/modules/container_apps/: main.tf
infra/modules/container_registry/: main.tf
infra/modules/key_vault/: main.tf
infra/modules/monitoring/: main.tf
infra/modules/openai/: main.tf
infra/modules/postgres/: main.tf
infra/modules/redis/: main.tf
tests/unit/: test_config.py  test_models.py  test_state.py
